# SFML-utils

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  README.md
cmake/: macro.cmake
cmake/modules/: FindBox2D.cmake  FindCEGUI.cmake  FindMysqlclient.cmake  FindORM.cmake  Findutils.cmake
doc/: Doxyfile.in
examples/: CMakeLists.txt  SFML-utils-basic  box2D.cpp  cegui.cpp  core.cpp  editor  editor.cpp  es.cpp  gui.cpp  main.cpp  map.cpp  map.json  map2.json  tile.cpp
examples/media/: areas.json  map.json
examples/media/cegui/looknfeel/: TaharezLook.looknfeel
examples/media/cegui/schemes/: TaharezLook.scheme
examples/media/datafiles/layouts/: Console.layout
examples/media/editor/brush/: HexCircle.lua  HexCircleRing.lua  SquarecircleRing.lua  hexCircle.lua  hexLine.lua  line.lua  square.lua  squareCircle.lua  squareLine.lua
examples/media/editor/cegui/: License (MIT - Fonts not included).txt
examples/media/editor/cegui/fonts/: License - DejaVu.txt
examples/media/editor/cegui/imagesets/: GlossySerpentFHD.imageset  GlossySerpentFHDCursors.imageset
examples/media/editor/cegui/layouts/: Editor.layout  NewLayer.layout  main.layout
examples/media/editor/cegui/looknfeel/: GlossySerpentFHD.Amber.looknfeel  GlossySerpentFHD.Jade.looknfeel  GlossySerpentFHD.looknfeel
examples/media/editor/cegui/schemes/: GlossySerpentFHD.scheme
examples/media/editor/cegui/xml_schemas/: GUIScheme.xsd
examples/media/editor/lua/: hexMath.lua
examples/media/editor/sprites/sheets/: buldings.json
examples/media/img/: trees.json
examples/media/img/trees1/: trees1.json
examples/media/sprites/sheets/: trees.json
examples/sfmlCEGUI/include/: App.h  GUIManager.h
examples/sfmlCEGUI/src/: App.cpp  GUIManager.cpp  Main.cpp
include/SFML-utils/: Core.hpp  ES.hpp  Gui.hpp  Map.hpp
include/SFML-utils/box2D/: DebugDraw.hpp  converter.hpp
include/SFML-utils/cegui/: DialogBox.hpp  GuiManager.hpp  MessageBox.hpp  PopupBox.hpp
include/SFML-utils/core/: Action.hpp  ActionTarget.hpp  ActionTarget.tpl  AnimatedSprite.hpp  Animation.hpp  ResourceManager.hpp  ResourceManager.tpl
include/SFML-utils/es/: Application.hpp  Application.tpl  Component.hpp  Component.tpl  Entity.hpp  Entity.tpl  EntityManager.hpp  EntityManager.tpl  System.hpp  System.tpl
include/SFML-utils/gui/: Button.hpp  Configuration.hpp  Container.hpp  Frame.hpp  HLayout.hpp  Label.hpp  Layout.hpp  Sprite.hpp  SpriteButton.hpp  TextButton.hpp  VLayout.hpp  Widget.hpp
include/SFML-utils/gui/event/: ButtonPressed.hpp  ButtonReleased.hpp
include/SFML-utils/map/: CompSkin.hpp  Configuration.hpp  DatabaseMapLoader.hpp  HexaIso.hpp  JsonMapLoader.hpp  JsonSpriteLoader.hpp  Layer.hpp  Layer.tpl  Map.hpp  Map.tpl  MapManager.hpp  MapMetaData.hpp  MapViewer.hpp  Models.hpp  Tile.hpp  Tile.tpl  VLayer.hpp  VLayer.tpl  VMap.hpp  VMapLoader.hpp  VTile.hpp
include/SFML-utils/map-editor/: Editor.hpp  Gui.hpp  GuiWindow.hpp  MapSelectionManager.hpp  MapStateChanger.hpp  SpriteSheetSelector.hpp  TileInfo.hpp  path.hpp
include/SFML-utils/map-editor/Editor/: Editor.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  newbrushdialog.cpp  newbrushdialog.hpp  newbrushdialog.ui
include/SFML-utils/map/es/: Components.hpp  Entity.hpp  Systems.hpp
include/SFML-utils/map/geometry/: Geometry.hpp  GeometryHexa.hpp  GeometryHexaIso.hpp  GeometrySquare.hpp  GeometrySquareIso.hpp  GeometrySquareIsoStaggered.hpp  GeometrySquareStaggered.hpp  HexaIso.hpp  SquareIsoStaggered.hpp
include/SFML-utils/map/models/: GeometryModel.hpp  InitialData.hpp  LayerModel.hpp  LayerTypeModel.hpp  MapModel.hpp  TileModel.hpp
include/SFML-utils/map/tileShapes/: BaseTile.hpp  Square.hpp  SquareIso.hpp  SquareIsoStaggered.hpp  SquareStaggered.hpp
src/: CMakeLists.txt
src/SFML-utils/: CMakeLists.txt
src/SFML-utils/box2D/: CMakeLists.txt  DebugDraw.cpp
src/SFML-utils/cegui/: CMakeLists.txt  DialogBox.cpp  GuiManager.cpp  MessageBox.cpp  PopupBox.cpp
src/SFML-utils/core/: Action.cpp  AnimatedSprite.cpp  Animation.cpp  CMakeLists.txt
src/SFML-utils/es/: Application.cpp  CMakeLists.txt  Component.cpp  Entity.cpp  EntityManager.cpp  System.cpp
src/SFML-utils/gui/: Button.cpp  CMakeLists.txt  Configuration.cpp  Container.cpp  Frame.cpp  HLayout.cpp  Label.cpp  Layout.cpp  Sprite.cpp  SpriteButton.cpp  TextButton.cpp  VLayout.cpp  Widget.cpp
src/SFML-utils/gui/event/: ButtonPressed.cpp  ButtonReleased.cpp  CMakeLists.txt
src/SFML-utils/map/: CMakeLists.txt  Configuration.cpp  DatabaseMapLoader.cpp  HexaIso.cpp  JsonMapLoader.cpp  JsonSpriteLoader.cpp  Map.cpp  MapEntity.cpp  MapManager.cpp  MapMetaData.cpp  MapViewer.cpp  Tile.cpp  VLayer.cpp  VMap.cpp  VMapLoader.cpp  VTile.cpp
src/SFML-utils/map-editor/: CMakeLists.txt  Editor.cpp  Gui.cpp  GuiCallbacks.cpp  GuiWindow.cpp  MapSelectionManager.cpp  MapStateChanger.cpp  SpriteSheetSelector.cpp  TileInfo.cpp
src/SFML-utils/map/es/: CMakeLists.txt  Entity.cpp  Systems.cpp
src/SFML-utils/map/geometry/: CMakeLists.txt  Geometry.cpp  GeometryHexa.cpp  GeometryHexaIso.cpp  GeometrySquare.cpp  GeometrySquareIso.cpp  GeometrySquareIsoStaggered.cpp  GeometrySquareStaggered.cpp  SquareStaggered.cpp
src/SFML-utils/map/models/: CMakeLists.txt  GeometryModel.cpp  InitialData.cpp  LayerModel.cpp  LayerTypeModel.cpp  MapModel.cpp  TileModel.cpp
src/SFML-utils/map/tileShapes/: Hexa.cpp  Square.cpp  SquareIso.cpp  SquareIsoStaggered.cpp  SquareStaggered.cpp
