set(INCROOT ${PROJECT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}/core)
set(SRCROOT ${PROJECT_SOURCE_DIR}/src/${CMAKE_PROJECT_NAME}/core)

set(FILES_HEADER
    ${INCROOT}/Action.hpp
    ${INCROOT}/ActionMap.hpp
    ${INCROOT}/ActionMap.tpl
    ${INCROOT}/ActionTarget.hpp
    ${INCROOT}/ActionTarget.tpl
    ${INCROOT}/ResourceManager.hpp
    ${INCROOT}/ResourceManager.tpl
)

set(FILES_SRC
    ${SRCROOT}/Action.cpp
)

set(LIB_NAME "${CMAKE_PROJECT_NAME}-core")

add_library(${LIB_NAME} SHARED ${FILES_SRC} ${FILES_HEADER})
SET_TARGET_PROPERTIES(${LIB_NAME}
    PROPERTIES
    OUTPUT_NAME ${LIB_NAME}
    CLEAN_DIRECT_OUTPUT 1
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
    SOVERSION ${VERSION_MAJOR}.${VERSION_MINOR}
)
target_link_libraries(${LIB_NAME} ${LIBS})
INSTALL(TARGETS ${LIB_NAME}
    DESTINATION lib
)

add_library(${LIB_NAME}-static STATIC ${FILES_HEADER} ${FILES_SRC})
SET_TARGET_PROPERTIES(${LIB_NAME}-static
    PROPERTIES
    OUTPUT_NAME ${LIB_NAME}
    CLEAN_DIRECT_OUTPUT 1
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
    SOVERSION ${VERSION_MAJOR}.${VERSION_MINOR}
)
target_link_libraries(${LIB_NAME}-static ${LIBS})
INSTALL(TARGETS ${LIB_NAME}-static
    DESTINATION lib
)

file(GLOB DEPLOY_FILES_AND_DIRS ${INCROOT})
foreach(ITEM ${DEPLOY_FILES_AND_DIRS})
   IF( IS_DIRECTORY "${ITEM}" )
      LIST( APPEND DIRS_TO_DEPLOY "${ITEM}" )
   ELSE()
      LIST( APPEND FILES_TO_DEPLOY "${ITEM}" )
   ENDIF()
endforeach()
INSTALL( FILES ${FILES_TO_DEPLOY} DESTINATION include/${CMAKE_PROJECT_NAME} )
INSTALL( DIRECTORY ${DIRS_TO_DEPLOY} DESTINATION include/${CMAKE_PROJECT_NAME} )
